@@ -28,7 +28,7 @@ var HeaderConstants = Constants.HeaderConstants;
 * The BlobResult class is used to store the blob information.
 * 
  * @property  {string}                      container                             The container name.
- * @property  {string}                      blob                                  The blob name.
+ * @property  {string}                      name                                  The blob name.
  * @property  {object}                      metadata                              The metadata key/value pair.
  * @property  {string}                      etag                                  The etag.
  * @property  {string}                      lastModified                          The date/time that the blob was last modified.
@@ -59,15 +59,15 @@ var HeaderConstants = Constants.HeaderConstants;
  * 
 * @constructor
 * @param {string} [container]  The container name.
-* @param {string} [blob]       The blob name.
+* @param {string} [name]       The blob name.
 */
-function BlobResult(container, blob) {
+function BlobResult(container, name) {
   if (container) {
     this.container = container;
   }
 
-  if (blob) {
-    this.blob = blob;
+  if (name) {
+    this.name = name;
   }
 }
 
