@@ -1,7 +1,10 @@
 Note: This is an Azure Storage only package. The all up Azure node sdk still has the old storage bits in there. In a future release, those storage bits will be removed and an npm dependency to this storage node sdk will 
-be taken. This is a GA preview release and the changes described below indicate the changes from the Azure node SDK 0.9.8 available here - https://github.com/Azure/azure-sdk-for-node.
+be taken. This is a GA release and the changes described below indicate the changes from the Azure node SDK 0.9.8 available here - https://github.com/Azure/azure-sdk-for-node.
 
 2016.05 Version 1.0.0
+
+BLOB
+* The `blob` property of BlobResult has been renamed to `name` to keep consistent with other services API and the `listBlob` API.
 
 TABLE
 * Fixed the issue that loses the data type for Edm.Double value like: 1.0.
